Workaround Qt's bug in calculating the bounding rect of the glyph in a glyph run

BUG:389528